[package]
name = "bicycle-book-wordcount"
version = "0.1.0"
authors = ["mitoneko"]
edition = "2018"

license = "MIT or Apache-2.0"
description = "単語を計測します。リポジトリ仕様の演習です。"
readme = "README.md"
repository = "https::github.com/mitoneko/wordcount"
categores = ["command-line-utilities"]
keywords = ["example","exercises"]

exclude = ["test.txt", "tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
